feat:完善资源管理
